--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Everton da Rosa</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -19,43 +19,41 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-red w3-card-2 w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a>
+    <a href="https://everton3x.github.io/" class="w3-bar-item w3-button w3-padding-large w3-white">Início</a>
+    <a href="https://everton3x.github.io/contabilidadepublica/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contabilidade Pública</a>
+    <a href="https://everton3x.github.io/helloworld/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Hello World</a>
+    <a href="https://everton3x.github.io/myquotes/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">My Quotes</a>
+    <a href="https://everton3x.github.io/chimarraofilosofico/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Chimarrão Filosófico</a>
   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 4</a>
+    <a href="https://everton3x.github.io/contabilidadepublica/" class="w3-bar-item w3-button w3-padding-large">Contabilidade Pública</a>
+    <a href="https://everton3x.github.io/helloworld/" class="w3-bar-item w3-button w3-padding-large">Hello World</a>
+    <a href="https://everton3x.github.io/myquotes/" class="w3-bar-item w3-button w3-padding-large">My Quotes</a>
+    <a href="https://everton3x.github.io/chimarraofilosofico/" class="w3-bar-item w3-button w3-padding-large">Chimarrão Filosófico</a>
   </div>
 </div>
 
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">START PAGE</h1>
-  <p class="w3-xlarge">Template by w3.css</p>
-  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>
+  <h1 class="w3-margin w3-jumbo">EVERTON DA ROSA</h1>
+  <p class="w3-xlarge">everton3x</p>
+  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top"><a href="#about-section">Sobre mim</a></button>
 </header>
 
 <!-- First Grid -->
-<div class="w3-row-padding w3-padding-64 w3-container">
+<div class="w3-row-padding w3-padding-64 w3-container"  id=about-section>
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+      <h1>Sobre mim</h1>
+      <h5 class="w3-padding-32">Sou Contador da Prefeitura Municipal de Independência, Rio Grande do Sul, formado pelo Instituto Cenecista de Ensino Superior de Santo Ângelo (IESA) e pós-graduado <i>lato sensu</i> em Contabilidade e Gestão Empresarial pela Universidade Regional Integrada do Alto Uruguai e das Missões (URI Santo Ângelo).</h5>
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="w3-text-grey">Minha experiência profissional engloba não só a contabilidade Pública, mas também as áreas de Controladoria, Auditoria e Perícia, além das áreas de Licitação e Gestão Patrimonial Pública.</p>
     </div>
 
     <div class="w3-third w3-center">
-      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+      <i class="fa fa-briefcase w3-padding-64 w3-text-red" style="font-size: 200px;"></i>
     </div>
   </div>
 </div>
@@ -68,29 +66,32 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     </div>
 
     <div class="w3-twothird">
-      <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+      <h1>Programação</h1>
+      <h5 class="w3-padding-32">Desde o início dos anos 2000, sou apaixonado por programação, em especial pela linguagem <a href="http://php.net">PHP</a>.</h5>
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="w3-text-grey">Nesta área, que é meu principal <i>hobby</i>, além do PHP, tenho experiência em <a href="https://www.javascript.com/">Javascript</a>, <a href="https://www.w3schools.com/css/">CSS</a>, <a href="https://www.w3schools.com/html/default.asp">HTML</a>, <a href="https://www.java.com/pt_BR/">Java</a>, <a href="https://www.python.org.br/">Python</a>, <a href="https://pt.wikipedia.org/wiki/Shell_script">Shell Script</a>, além de ser facinado pelo <a href="https://pt.wikipedia.org/wiki/Linux">Linux</a>, com uma queda especial pelo <a href="https://www.debian.org/">Debian</a>.</p>
     </div>
   </div>
 </div>
 
 <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-    <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1>
+    <h1 class="w3-margin w3-xlarge">Quote of the day: <q>Vaca não dá leite. Se você quiser, tem que ir tir.</q> -- Mário Sérgio Cortella</h1>
 </div>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity">
   <div class="w3-xlarge w3-padding-32">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <a href="https://facebook.com/everton3x"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <!--<a href=""><i class="fa fa-instagram w3-hover-opacity"></i></a>-->
+    <!--<a href=""><i class="fa fa-snapchat w3-hover-opacity"></i></a>-->
+    <!--<a href=""><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>-->
+    <a href="https://twitter.com/everton3x"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+    <!--<a href=""><i class="fa fa-linkedin w3-hover-opacity"></i></a>-->
+    <a href="https://github.com/everton3x"><i class="fa fa-github w3-hover-opacity"></i></a>
+    <a href="https://medium.com/everton3x"><i class="fa fa-medium w3-hover-opacity"></i></a>
+
+
+
  </div>
  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
