--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <a href="https://everton3x.github.io/contabilidadepublica/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contabilidade Pública</a>
     <a href="https://everton3x.github.io/helloworld/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Hello World</a>
     <a href="https://everton3x.github.io/myquotes/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">My Quotes</a>
-    <a href="https://everton3x.github.io/chimarraofilosofico/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Chimarrão Filosófico</a>
   </div>
 
   <!-- Navbar on small screens -->
@@ -31,7 +30,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <a href="https://everton3x.github.io/contabilidadepublica/" class="w3-bar-item w3-button w3-padding-large">Contabilidade Pública</a>
     <a href="https://everton3x.github.io/helloworld/" class="w3-bar-item w3-button w3-padding-large">Hello World</a>
     <a href="https://everton3x.github.io/myquotes/" class="w3-bar-item w3-button w3-padding-large">My Quotes</a>
-    <a href="https://everton3x.github.io/chimarraofilosofico/" class="w3-bar-item w3-button w3-padding-large">Chimarrão Filosófico</a>
   </div>
 </div>
 
@@ -88,7 +86,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <a href="https://twitter.com/everton3x"><i class="fa fa-twitter w3-hover-opacity"></i></a>
     <!--<a href=""><i class="fa fa-linkedin w3-hover-opacity"></i></a>-->
     <a href="https://github.com/everton3x"><i class="fa fa-github w3-hover-opacity"></i></a>
-    <a href="https://medium.com/everton3x"><i class="fa fa-medium w3-hover-opacity"></i></a>
+    <a href="https://medium.com/@everton3x"><i class="fa fa-medium w3-hover-opacity"></i></a>
 
 
 
