--- a/index.html
+++ b/index.html
@@ -1,15 +1,61 @@
 <!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-	<head>
-		<title>Everton da Rosa</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link href="assets/css/main.css" type="text/css" media="all" rel="stylesheet">
-	</head>
-	<body>
-		<main id="container">
-			<header id="name">Everton da Rosa</header>
-			<article id="quote">"Desisti das pessoas..."</article>
-		</main>
-	</body>
+    <head>
+        <title>Everton da Rosa</title>
+        <meta charset="utf-8"/>
+        <meta name="description" content="Everton da Rosa Web Site">
+        <meta name="keywords" content="Everton da Rosa, everton3x">
+        <meta name="author" content="Everton da Rosa">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+        <link rel="stylesheet" href="assets/css/main.css"/>
+        <noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
+    </head>
+    <body class="is-preload">
+        <div id="wrapper">
+            <div id="bg"></div>
+            <div id="overlay"></div>
+            <div
+                id="main">
+
+                <!-- Header -->
+                <header id="header">
+                    <h1>Everton da Rosa</h1>
+                    <p>Contador &nbsp;&bull;&nbsp; Servidor Público Municipal &nbsp;&bull;&nbsp; Programador nas horas vagas</p>
+                    <nav>
+                        <ul>
+                            <!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+                            <!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+                            <!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+                            <li><a href="https://github.com/everton3x/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                            <li><a href="https://www.linkedin.com/in/everton-da-rosa/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+                            <li><a href="mailto:everton3x@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                        </ul>
+                    </nav>
+                </header>
+
+                <!-- Footer -->
+                <footer id="footer">
+                    <span class="copyright">&copy; Everton da Rosa. Design:
+                        <a href="http://html5up.net">HTML5 UP</a>.</span>
+                </footer>
+
+            </div>
+        </div>
+        <script>
+            window.onload = function () {
+                document.body.classList.remove('is-preload');
+            }
+            window.ontouchmove = function () {
+                return false;
+            }
+            window.onorientationchange = function () {
+                document.body.scrollTop = 0;
+            }
+        </script>
+    </body>
 </html>
