--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
                 <!-- Header -->
                 <header id="header">
                     <h1>Everton da Rosa</h1>
-                    <p>Contador &nbsp;&bull;&nbsp; Servidor Público Municipal &nbsp;&bull;&nbsp; Programador nas horas vagas</p>
+                    <p>Contador Público Municipal</p>
                     <nav>
                         <ul>
                             <!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
                             <!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
                             <!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+			    <li><a href="https://pt.quora.com/profile/Everton-Da-Rosa" class="icon brands fa-quora"><span class="label">Quora</span></a></li>
                             <li><a href="https://github.com/everton3x/" class="icon brands fa-github"><span class="label">Github</span></a></li>
                             <li><a href="https://www.linkedin.com/in/everton-da-rosa/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
                             <li><a href="mailto:everton3x@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
