Corrigido link para o currículo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<h2>Contador Público Municipal</h2>
 									<p>Sou Contador da <a href="https://independencia.rs.gov.br"></a>Prefeitura Municipal de Independência (RS)</a> desde 2009.</p>
 									<ul class="actions">
-										<li><a href="curriculo.md" class="button">Currículo</a></li>
+										<li><a href="curriculo.html" class="button">Currículo</a></li>
 									</ul>
 								</div>
 							</div>
