Organizados alguns textos

--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
 									<span class="icon solid major fa-file-invoice-dollar"></span>
 									<h3>Textos sobre Contabilidade</h3>
 									<p>Não que eu seja um grande escritor, mas de vez enquando escrevo textos com reflexões sobre a Contabilidade.</p>
-									<p>Dentre os temas que já tratei, posso destacar <a href="#">XXXXX</a>, <a href="#">XXXXX</a> e <a href="#">XXXXX</a>.</p>
+									<!--<p>Dentre os temas que já tratei, posso destacar <a href="#">XXXXX</a>, <a href="#">XXXXX</a> e <a href="#">XXXXX</a>.</p>-->
 								</section>
 								<section>
 									<span class="icon solid major fa-pen-nib"></span>
 									<h3>Reflexões sobre assuntos diversos</h3>
 									<p>Embora não seja profundo conhecedor da Filosofia, arrisco-me a tecer algumas ideias sobre os mais diversos assuntos.</p>
-									<p>Dentre os principais tópicos, gosto de destacar <a href="#">XXXXX</a>, <a href="#">XXXXX</a>, <a href="#">XXXXX</a> e <a href="#">XXXXX</a>.</p>
+									<!--<p>Dentre os principais tópicos, gosto de destacar <a href="#">XXXXX</a>, <a href="#">XXXXX</a>, <a href="#">XXXXX</a> e <a href="#">XXXXX</a>.</p>-->
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="coisas-que-fiz.html" class="button">Quase tudo que já fiz</a></li>
+								<li><a href="awesome.html" class="button">Quase tudo que já fiz</a></li>
 							</ul>
 						</div>
 					</section>
