--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <!--
-	Hyperspace by HTML5 UP
+	Aerial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html lang="pt">
+<html>
 	<head>
 		<title>Everton da Rosa</title>
 		<meta charset="utf-8" />
@@ -13,189 +13,40 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
 
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Bem-vindo</a></li>
-							<li><a href="#one">Quem eu sou</a></li>
-							<li><a href="#two">O que eu faço</a></li>
-							<li><a href="#three">Contatos</a></li>
-						</ul>
-					</nav>
-				</div>
-			</section>
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Everton da Rosa</h1>
-							<p>Contador Público Municipal<br />
-							e interessado em Programação e Data Science nas horas vagas.</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Saiba mais</a></li>
+				<!-- Header -->
+					<header id="header">
+						<h1>Everton da Rosa</h1>
+						<p>Contador Público</p>
+						<nav>
+							<ul>
+								<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
+								<li><a href="https://pt.quora.com/profile/Everton-Da-Rosa" class="icon brands fa-quora"><span class="label">Quora</span></a></li>
+								<li><a href="https://www.instagram.com/everton3x/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.facebook.com/everton3x" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<!--<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+								<li><a href="https://github.com/everton3x" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/everton-da-rosa/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="mailto:everton3x@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-						</div>
-					</section>
+						</nav>
+					</header>
 
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
-						<section>
-							<a href="#" class="image"><img src="images/accounting-g808b8244d_640.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Contador Público Municipal</h2>
-									<p>Sou Contador da <a href="https://independencia.rs.gov.br"></a>Prefeitura Municipal de Independência (RS)</a> desde 2009.</p>
-									<ul class="actions">
-										<li><a href="curriculo.html" class="button">Currículo</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/technology-g3b9419b92_640.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Programação</h2>
-									<p>Um dos meus interesses é a programação, que tenho por hobby desde o início dos anos 2000.</p>
-									<ul class="actions">
-										<li><a href="programacao.html" class="button">Saiba mais</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/stock-g40b3edd06_640.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Data Science</h2>
-									<p>ou Ciência de Dados, essa área do conhecimento é imprescindível aos Contadores e, por isso, é um dos meus interesses também.</p>
-									<ul class="actions">
-										<li><a href="data-science.html" class="button">Saiba mais</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>O que eu faço</h2>
-							<div class="features">
-								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Programação</h3>
-									<p>Além de hobby, uso a programação como ferramenta de trabalho.</p>
-									<p>Com esse intuito, desenvolvi algumas ferramentas que me auxiliam no meu dia-a-dia, das quais destaco <a href="https://github.com/iddrs/pad-converter">um conversor dos arquivos do SIAPC/PAD</a>, e <i>scripts</i> para conferência da <a href="https://github.com/iddrs/msc-conferencia">Matriz de Saldos Contábeis</a> e para automação de <a href="https://github.com/iddrs/consistencia-contabil">testes de consistência contábil</a>.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-chart-line"></span>
-									<h3>Ciência de Dados</h3>
-									<p>A Ciência de Dados (<i>Data Science</i> em inglês) é uma área da qual a Contabilidade pode tirar muito proveito.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-file-invoice-dollar"></span>
-									<h3>Textos sobre Contabilidade</h3>
-									<p>Não que eu seja um grande escritor, mas de vez enquando escrevo textos com reflexões sobre a Contabilidade.</p>
-									<!--<p>Dentre os temas que já tratei, posso destacar <a href="#">XXXXX</a>, <a href="#">XXXXX</a> e <a href="#">XXXXX</a>.</p>-->
-								</section>
-								<section>
-									<span class="icon solid major fa-pen-nib"></span>
-									<h3>Reflexões sobre assuntos diversos</h3>
-									<p>Embora não seja profundo conhecedor da Filosofia, arrisco-me a tecer algumas ideias sobre os mais diversos assuntos.</p>
-									<!--<p>Dentre os principais tópicos, gosto de destacar <a href="#">XXXXX</a>, <a href="#">XXXXX</a>, <a href="#">XXXXX</a> e <a href="#">XXXXX</a>.</p>-->
-								</section>
-							</div>
-							<ul class="actions">
-								<li><a href="awesome.html" class="button">Quase tudo que já fiz</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Onde me encontrar</h2>
-							<p>Quer trocar uma ideia, fazer uma sugestão, um elogio ou apontar o dedo pra onde eu errei? Então entre em contato comigo.</p>
-							<div class="split style1">
-								<!--<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>-->
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Endereço</h3>
-											<span>Em algum lugar de <address>Três de Maio - Rio Grande do Sul - Brasil</address></span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="mailto:everton3x@gmail.com">everton3x@gmail.com</a>
-										</li>
-										<li>
-											<h3>Telefone</h3>
-											<span>(55) 98449-3656 (WhatsApp)</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
-												<li><a href="https://pt.quora.com/profile/Everton-Da-Rosa" class="icon brands fa-quora"><span class="label">Quora</span></a></li>
-												<li><a href="https://www.facebook.com/everton3x/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="https://github.com/everton3x" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://gitlab.com/everton3x" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
-												<li><a href="https://www.instagram.com/everton3x/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="https://www.linkedin.com/in/everton-da-rosa/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
-						</div>
-					</section>
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Everton da Rosa (2022). Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+					</footer>
 
 			</div>
-
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+		</div>
+		<script>
+			window.onload = function() { document.body.classList.remove('is-preload'); }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
 	</body>
 </html>
