--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<nav>
 							<ul>
 								<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
-								<li><a href="curriculo.html" class="icon solid fa-file-certificate"><span class="label">Currículo</span></a></li>
+								<li><a href="curriculo.html" class="icon brands fa-wpforms"><span class="label">Currículo</span></a></li>
 								<li><a href="https://pt.quora.com/profile/Everton-Da-Rosa" class="icon brands fa-quora"><span class="label">Quora</span></a></li>
 								<li><a href="https://www.instagram.com/everton3x/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.facebook.com/everton3x" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
