Implementação da seção de planilhas

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 							<ul>
 								<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 								<li><a href="curriculo.html" class="icon brands fa-wpforms"><span class="label">Currículo</span></a></li>
+								<li><a href="planilhas/index.html" class="icon fa-regular fa-file-excel"><span class="label">Planilhas</span></a></li>
 								<li><a href="https://pt.quora.com/profile/Everton-Da-Rosa" class="icon brands fa-quora"><span class="label">Quora</span></a></li>
 								<li><a href="https://www.instagram.com/everton3x/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.facebook.com/everton3x" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
