--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i><span>Sobre</span></a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Currículo</span></a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Serviços</span></a></li>
+        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Cursos</span></a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contato</span></a></li>
       </ul>
     </nav>
